# ProjectDesk

./: .eslintrc.json  .gitignore  .prettierrc.json  LICENCE  README.md  index.html  package-lock.json  package.json
migrations/2023-03-09-030741_create_projects_table/: down.sql  up.sql
src/: index.tsx  style.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  database.rs  main.rs  project_store.rs
src-tauri/tests/: database_test.rs
src/components/ProjectList/: ProjectList.tsx  ProjectListHeader.tsx  ProjectListItem.tsx
src/components/common/: Hover.tsx
src/components/form/: ProjectInputInfoForm.tsx
src/components/layout/: LayoutHeader.tsx
src/pages/: AddProjectPage.tsx  StartPage.tsx
src/structures/: Project.ts
