[package]
name = "project_desk"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = "https://github.com/IbuIbu2057/ProjectDesk"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0.94"
serde = { version = "1.0.153", features = ["derive"] }
tauri = { version = "1.2.4", features = ["shell-open"] }
diesel = { version = "2.0.3", features = ["sqlite"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
dotenv = "0.15.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
